kubernetes/apps/default/homepage/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage
  annotations:
    gatus.home-operations.com/endpoint: |-
      dns:
        query-name: homepage.unscfleet.com
        query-type: A
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - "homepage.unscfleet.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: homepage
          port: 80
